--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,7 +7,7 @@
 }
 .inicio {
   height: 500px;
-  background-image: url(/public/img/inicio-img.jpg);
+  background-image: url(public/img/inicio-img.jpg);
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
