--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,14 +1,7 @@
-/* footer {
-    height: 100vh;
-    width: 100%;
-    position: relative;
-} */
+/* este footer no tiene mas uso */
 
 .pie {
     width: 100%;
-    /* position: absolute;
-    bottom: 0;
-    left: 0; */
     padding: 2rem 8%;
     background-color: #0e0e0e;
     display: flex;
