--- a/public/css/index.css
+++ b/public/css/index.css
@@ -17,11 +17,18 @@
   position: fixed;
   right: 30px;
   bottom: 70px;
+  height: 45px;
+  width: 45px;
 }
 
 .wpp-fixed a {
   color: limegreen;
-  font-size: 2.3rem;
+  /* font-size: .2rem; */
+}
+
+.wpp-fixed a img {
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 800px) {
