--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
   /*font-family: 'Oswald', sans-serif;*/
+  scroll-behavior: smooth;
 }
 .inicio {
   height: 500px;
