--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,73 +1,130 @@
-.navbar {
-    background-color: #0a141d;
+header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    background: #fff;
+    box-shadow: 0 5px 25px rgba(0, 0, 0, 0.05);
+    z-index: 1000;
 }
 
-.navbar div {
-    display: none;
+.logo {
+    height: 60px;
+    line-height: 60px;
+    color:  rgb(10, 20, 29);
+    font-weight: 700;
+    font-size: 2em;
+    text-decoration: none;
+    cursor: pointer;
+    padding-left: 20px;
 }
 
-.navbar .toggle {
+#toggle {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 60px;
+    height: 60px;
+    background: rgb(10, 26, 42);
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#toggle::before {
+    content: '';
+    position: absolute;
+    width: 28px;
+    height: 2px;
+    background: white;
+    transform: translateY(-5px);
+    transition: .2s;
+}
+
+#toggle::after {
+    content: '';
+    position: absolute;
+    width: 28px;
+    height: 2px;
+    background: white;
+    transform: translateY(5px);
+    transition: .2s;
+}
+
+#toggle.active::before {
+    transform: translateY(0px) rotate(45deg);
+}
+
+#toggle.active::after {
+    transform: translateY(0px) rotate(-45deg);
+}
+
+#toggle.active {
+    background: rgb(10, 26, 42);
+}
+
+#navbar {
+    position: relative;
+    height: 60px;
+    right: 60px;
+    background: rgba(0, 0, 0, 0.98);
+    transition: .5s;
+    /* estas dos ultimas caracteristicas talvez no sean necesarias */
+    width: 0px;
+    overflow: hidden;
+}
+
+#navbar.active {
+    width: 660px;
+}
+
+#navbar ul {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+}
+
+#navbar ul li {
+    list-style: none;
+}
+
+#navbar ul li a {
+    color: white;
+    height: 60px;
+    line-height: 60px;
     display: inline-block;
-}
-
-.navbar .link {
-    display: block;
-    text-align: center;
-    padding: 1em;
     text-decoration: none;
-    background-color: #0a141d;
     font-size: 1.2em;
-    color: #efefef;
-    transition: .1s;
-    letter-spacing: 1px;
+    padding: 0 15px;
+    letter-spacing: 2px;
 }
 
-.navbar .link:hover,
-.navbar .link:active {
-    color: whitesmoke;
-    background-color: #0a1a2a;
+#navbar ul li a:hover {
+    color: cornflowerblue;
+
 }
 
-.navbar a {
-    text-decoration: none;
-}
-
-.navbar .toggle {
-    padding: 1em;
-    color: #efefef;
-}
-
-@media (min-width: 48em) {
-    .navbar {
-        display: flex;
-    }
-
-    .navbar div {
-        display: flex;
-    }
-
-    .navbar .links-wrapper {
+@media (max-width: 991px) {
+    #navbar {
+        position: fixed;
+        bottom: -100%;
+        right: 0;
+        width: 100%;
+        transition: 0.5s;
         display: flex;
         justify-content: center;
+    }
+    #navbar.active {
+        height: calc(100vh - 60px);
+        bottom: 0;
         width: 100%;
     }
-
-    .navbar .link {
-        width: auto;
-    }
-
-    .navbar .toggle {
-        display: none;
-    }
-}
-
-@media (max-width: 48em) {
-    .navbar.active .toggle {
-        background-color: #0a141d;
-        color: #efefef;
-    }
-
-   .navbar.active div {
-        display: block;
+    #navbar ul{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
